[package]
name = "microvmi"
version = "0.1.10"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
description = "A cross-platform, unified, low-level VM introspection API supporting multiple hypervisors"
readme = "README.md"
homepage = "https://github.com/Wenzel/libmicrovmi"
repository = "https://github.com/Wenzel/libmicrovmi"
license = "GPL-3.0-only"
keywords = ["introspection", "VMI"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
# Xen driver
xen = ["xenctrl", "xenstore-rs", "xenforeignmemory", "xenevtchn", "xenvmevent-sys", "libc"]
# KVM driver
kvm = ["kvmi"]
# VirtualBox driver
virtualbox = ["fdp"]
# Hyper-v driver
hyper-v = ["winapi", "widestring", "ntapi", "vid-sys"]


[dependencies]
log = "0.4"
env_logger = "0.8"
bitflags = "1.2.1"
cty = "0.2.1"
nix = "0.19"
libc = { version = "0.2", optional = true }
xenctrl = { version = "0.4.2", optional = true }
xenstore-rs = { version = "0.3.0", optional = true }
xenforeignmemory = { version = "0.1.0", optional = true }
xenevtchn = { version = "0.1.2", optional = true }
xenvmevent-sys = { version = "0.1.3", optional = true }
kvmi = { version = "0.2.1", optional = true }
fdp = { version = "0.1.0", optional = true }
winapi = { version = "0.3", features = ["tlhelp32", "winnt", "handleapi", "securitybaseapi"], optional = true }
widestring = { version = "0.4", optional = true }
ntapi = { version = "0.3", optional = true }
vid-sys = { version = "0.3.0", features = ["deprecated-apis"], optional = true }


[dev-dependencies]
ctrlc = "3.1"
clap = "2.33"
colored = "2.0"
mockall = "0.9"
test-case = "1"
