[metadata]
description-file = README.md

[aliases]
test=pytest

[flake8]
max-line-length=120
exclude = .git, .nox, .venv, venv, build, dist
# black compatibility
extend-ignore = E203
# ignore import unused in __init__
per-file-ignores = __init__.py:F401

[coverage:run]
# measure branch coverage in addition to statement coverage
branch = True
# restrict coverage on the package only
source = microvmi

# mandatory section, despite what the docs says
[mypy]
