[metadata]
description-file = README.md

[aliases]
test=pytest

[flake8]
max-line-length=120
exclude = .git, .nox, .venv, venv, build, dist
# black compatibility
extend-ignore = E203
# ignore import unused in __init__
# ignore unable to detect undefined names
per-file-ignores = __init__.py:F401,F403

[coverage:run]
# measure branch coverage in addition to statement coverage
branch = True
# restrict coverage on the package only
source = microvmi

# mandatory section, despite what the docs says
[mypy]

[mypy-microvmi.pymicrovmi.*]
ignore_missing_imports = True

[mypy-volatility3.framework.layers.handler.*]
ignore_missing_imports = True
